style.css
/* ... */
/* 

MOBILE RESPONSIVENESS ↓

*/

@media (max-width: 1280px) {
  header .row {
    align-items: flex-end;
  }
}

@media (max-width: 1024px) {
  .btn__menu {
    display: block;
  }
  header .row {
    flex-direction: column;
    align-items: center;
  }
  footer {
    padding: 80px 32px;
  }
}

@media (max-width: 768px) {
  #quality .row,
  #values .row {
    flex-direction: column-reverse;
  }
  #steps .row,
  #testimonials .row {
    flex-direction: column;
    align-items: center;
  }
  #pricing .row {
    margin-top: 40px;
  }
}

@media (max-width: 640px) {
  .container {
    padding: 80px 0;
  }

  .nav__logo {
    margin: 8px 0;
    padding-bottom: 4px;
  }
  main {
    margin-bottom: 80px;
  }
}

